fixed responsive login/signup. Added logo to search page. aligned buttons on home page

--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -54,3 +54,6 @@ padding: 40px;
     border-radius: none;
 }
 
+.extra-space {
+    padding-bottom: 10px;
+}
